GH-3: added MBProgressHub using carthage to prevent the user from sending stuff twice.

--- a/flights/Resources/Storyboards/Base.lproj/Main.storyboard
+++ b/flights/Resources/Storyboards/Base.lproj/Main.storyboard
@@ -54,6 +54,7 @@
                     <connections>
                         <outlet property="flightIdTextField" destination="U1b-vA-Rmi" id="dZY-eV-aG5"/>
                         <outlet property="mapView" destination="IAZ-C0-C7e" id="EDC-Th-QWF"/>
+                        <outlet property="searchButton" destination="yM4-kX-87p" id="aQm-pf-Hf8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
